tests/fixtures/svs-v3/invalid/seq-zero.hex
245e065c071508036e646e080b7376732d76332d746573743601031400151ac918ca16070908046e6f6465080161d209d4046553f100d6010016031b0100172027e7651568c1732a660c66d3edd033bcc6dbe45135e9a651484ee74690483ee7
